12/27/12 move createEquationNode to ChallengeNode base class
12/27/12 move correct/incorrect icons into EquationBoxNode
12/27/12 move more duplicated code into ChallengeNode base class
12/27/12 standardize rendering order in ChallengeNode subclasses
12/27/12 move most (but not all) duplicate code into ChallengeNode base class
12/27/12 delete redundant visibility updates in Check button handler
12/27/12 move visibility changes into model game-state observer
12/27/12 move title creation to ChallengeNode base class
12/27/12 fix: call IChallenge.setAnswerVisible when "Next" button is visible, so that point tools see the answer line
12/27/12 standardize order of lines that are provided to point tool
12/27/12 move enums to top-level class files
12/27/12 improve model sync in P3P_GraphNode
12/27/12 move duplicate code into GTL_GraphNode base class
12/27/12 make LineNode non-abstract, with no equation by default (useful in game)
12/27/12 fix default title for MTE challenges
12/27/12 make P3P_Challenge extend MatchChallenge, instead of being a different type of challenge
12/27/12 move duplication in GTL_Challenge and MTE_Challenge into base class MatchChallenge
12/22/12 add support for 6 levels to game reward; PhET logo for level 5, all images for level 6
12/22/12 smite inappropriate uses of constants for axes ranges
12/22/12 started the basic outline of challenge generator for Level 1, see ChallengeFactory1
12/22/12 review and augment internal documentation
12/22/12 verified that basic data-collection works for Game
12/22/12 fix dynamic ranges for GTL challenges
12/22/12 set initial guess for GTL and MTE challenges in a more general way
12/22/12 add slope manipulator for dissimilar line forms
12/22/12 throw exception if an unsupported LineForm or ManipulationMode is encountered
12/22/12 consolidate all game view elements in one package
12/22/12 collapse GTL view hierarchy to 1 primary node and 4 graphs by consulting challenge.lineForm and challenge.manipulationMode